--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
     "husky": "^8.0.3",
     "prettier": "^3.0.0"
   }
